--- a/lico.css
+++ b/lico.css
@@ -33,9 +33,11 @@ body {
     position: absolute;
     left: 5%;
     top: 28%;
-    grid-template-columns: 1200px;
-    grid-template-rows: 70px;
+    grid-template-columns: 1210px;
+    grid-template-rows: 470px;
     grid-gap: 15px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 5%;
     }
 
     .wrappera > .a {
